fixed spacing and scrolling in findings area

--- a/kraken_frontend/src/styling/workspace-findings.css
+++ b/kraken_frontend/src/styling/workspace-findings.css
@@ -33,6 +33,7 @@
 .workspace-findings-body {
     height: calc(100% - 2.5em);
     box-sizing: border-box;
+    padding: 2em 1em;
 }
 
 .workspace-findings-table-pre-header > div:nth-child(2) {
